Selectable MIDI Device

--- a/KazuMIDIPlayer/App.config
+++ b/KazuMIDIPlayer/App.config
@@ -19,8 +19,8 @@
             <setting name="firstLaunch" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="useKDMAPI" serializeAs="String">
-                <value>False</value>
+            <setting name="midiDevice" serializeAs="String">
+                <value />
             </setting>
         </KazuMIDIPlayer.Properties.Settings>
     </userSettings>
