--- a/KazuMIDIPlayer/Properties/Settings.settings
+++ b/KazuMIDIPlayer/Properties/Settings.settings
@@ -14,8 +14,8 @@
     <Setting Name="firstLaunch" GenerateDefaultValueInCode="false" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="useKDMAPI" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+    <Setting Name="midiDevice" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
